k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flatris-service
  namespace: flatris
  labels:
    app: flatris
spec:
  selector:
    app: flatris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
