k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flatris-ingress
  namespace: flatris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: flatris.saikbiradar.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flatris-service
            port:
              number: 80
